# cli-typer

./: .clang-format  .cmake-format  CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml
example/: file.cfg  test.sh
scripts/: formatter.sh
src/: Actions.cpp  Actions.hpp  Print.cpp  Print.hpp  Stream.cpp  Stream.hpp  main.cpp
